// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> render correctly 1`] = `
<div
  className="rc-select select-0-2-1 rc-select-single rc-select-show-arrow"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="rc-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rc-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rc-select-selection-search-input"
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          Object {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rc-select-selection-placeholder"
    >
      Foo Bar Baz
    </span>
  </div>
  <span
    aria-hidden={true}
    className="rc-select-arrow"
    onMouseDown={[Function]}
    style={
      Object {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="rc-select-arrow-icon"
    />
  </span>
</div>
`;

exports[`<Select> render correctly with options 1`] = `
<div
  className="rc-select select-0-2-1 rc-select-single rc-select-show-arrow"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="rc-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rc-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autoComplete="off"
        className="rc-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          Object {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rc-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rc-select-arrow"
    onMouseDown={[Function]}
    style={
      Object {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="rc-select-arrow-icon"
    />
  </span>
</div>
`;
